<resources>
    <string name="app_name">ChatAppAndroid</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="title_edit_text">Type your Phone Number</string>
    <string name="did_not_receive_otp">did not receive OTP</string>
    <string name="resend_otp">resend otp</string>
    <string name="verify">verify</string>
    <string name="profile_info">Profile Information</string>
    <string name="des_profile">Please set you name and an optional Profile Image</string>
    <string name="desc">Work In Android Development and Flutter Development</string>
    <string name="profile_name">Profile Name</string>
    <string name="profilename">Profile Name</string>
    <string name="status">Online</string>
    <string name="hint_text_edit_text">Ask a question</string>
</resources>