<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
       tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#3D9832"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"

                android:layout_weight="1"
                android:layout_width="0dp"
                android:src="@drawable/ic_backspace"
                android:layout_height="60dp"

                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile01"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/img3"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="18dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilename"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="11sp"
                    android:visibility="visible"
                    android:textStyle="bold|normal"
                    android:textColor="@color/white"
                    />
             </LinearLayout>



        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar"
        android:id="@+id/linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>
    <LinearLayout
        android:background="@drawable/bottom_shape"
        android:id="@+id/linear02"
        android:layout_above="@+id/linear01"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:baselineAligned="false"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/messageBox"
                        android:gravity="start"
                        android:layout_marginStart="5dp"
                        android:paddingStart="5dp"
                        android:hint="@string/hint_text_edit_text"
                        android:paddingEnd="1dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColorHint="#424242"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </EditText>

                </LinearLayout>
                <ImageView
                    android:id="@+id/attachment"
                    android:padding="9dp"
                    android:layout_weight="3"
                    app:tint="#5C5C5C"
                    android:src="@drawable/ic_attachment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <ImageView
                    android:id="@+id/camera"
                    android:padding="9dp"
                    android:layout_weight="3"
                    app:tint="#5C5C5C"
                    android:src="@drawable/ic_camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/sendBtn"
            android:background="@drawable/background_shape"
            android:backgroundTint="#3244AA"
            android:src="@drawable/ic_send"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_marginEnd="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white" />
    </LinearLayout>

</RelativeLayout>
    <!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ChatActivity">-->


<!--    &lt;!&ndash; Toolbar &ndash;&gt;-->
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:background="#4EDD45"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <LinearLayout-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                app:tint="@color/white"-->
<!--                android:src="@drawable/ic_backspace"-->
<!--                android:layout_height="60dp"-->
<!--                tools:ignore="Suspicious0dp" />-->

<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:id="@+id/profile01"-->
<!--                android:layout_width="42dp"-->
<!--                android:layout_height="42dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:src="@drawable/img3" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_gravity="start"-->
<!--            android:gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:id="@+id/name"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/profilename"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold|normal" />-->

<!--            <TextView-->
<!--                android:id="@+id/status"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/status"-->
<!--                android:textSize="11sp"-->
<!--                android:visibility="visible"-->
<!--                android:textStyle="bold|normal"-->
<!--                android:textColor="@color/white"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </androidx.appcompat.widget.Toolbar>-->
<!--    &lt;!&ndash; Chat messages RecyclerView &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:orientation="vertical"-->
<!--        android:id="@+id/linear01"-->
<!--        android:layout_below="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->
<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:layout_width="match_parent"-->
<!--            android:visibility="visible"-->
<!--            android:layout_height="wrap_content">-->


<!--        </androidx.recyclerview.widget.RecyclerView>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linear02"-->
<!--        android:layout_below="@+id/linear01"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:weightSum="2"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--   >-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardUseCompatPadding="true"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            app:cardElevation="10dp"-->
<!--            android:layout_weight="2"-->

<!--            />-->



<!--    </LinearLayout>-->
<!--</RelativeLayout>-->

